--- a/VRChat/13/1008213.html
+++ b/VRChat/13/1008213.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "xYH9eJHCQRC9cj/FlHyDJnZCqgJt3jdJXUlYkqBFVLI="></script>
+    "vB2Y9PjkNOgGer7n3s+Nmecnkn0MZPQjmAd370Fnijg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"缶バッジの3Dモデル","description":"缶バッジ\npsdを同梱していますので、好きなように描きかえて使ってください。\n\n仕様\n・256 ポリゴン\n・1 マテリアル\n・テクスチャサイズ 1024x1024\n・大きさ 2m\n\nファイルについて\n・結城ゆきの品位を落とすような用途での使用は禁止。\n・テクスチャの絵柄部分の一部分を描きかえることは禁止。\n・テクスチャの絵柄部分を完全に描きかえることは許可。\n・3Dモデルの改造は許可。\n・すべて利用者の責任で使用してください。\n\nYukiYukiVirtual 結城ゆき 2018/September/10\n\nVRChatで帽子に着けて遊んでいます。リアル缶バッジは https://yukiyukivirtual.booth.pm/items/964944 から","url":"https://booth.pm/ja/items/1008213","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/cdb02673-8664-4200-9407-c3c4df48aa2c/i/1008213/65ca7ff4-d599-4424-ac8a-30b381d8b958_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xYH9eJHCQRC9cj/FlHyDJnZCqgJt3jdJXUlYkqBFVLI="></script>
+    nonce="vB2Y9PjkNOgGer7n3s+Nmecnkn0MZPQjmAd370Fnijg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -473,9 +473,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
