--- a/VRChat/13/1007813.html
+++ b/VRChat/13/1007813.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "MQUJ8IE5odp7LecKcsedfTIa9u/KNWSZDEVWP5ZMUzg="></script>
+    "6NDQogLKiiExfZOf4mHwl9eeUT31Y113X79xkOaJIEI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"３Dモデル「紅玉堂製クレイモア」","description":"VRChat向けに作られた３D武器モデルです。VRChat以外にもゲームの製作やVTuberの動画配信の演出などご自由にご利用ください。\nzipで解凍されたフォルダには「.unitypackage」形式のファイルと「readme」が入っています。\nデフォルト使用のシェーダーは「Standard」ですが、UTS2向けに設定されたマテリアルも同梱されています。UTS2設定のマテリアルをご利用の際は「ユニティちゃんトゥーンシェーダ２」をあらかじめUnityに導入しておいてください。\n\n\n▽面数は2120です、VRChatのポリゴン数制限にご注意ください。","url":"https://booth.pm/ja/items/1007813","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/eac26deb-f8eb-4293-8010-904b0d088bf4/i/1007813/902a8500-e3fc-4511-9ebd-1f779f6cb162_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="MQUJ8IE5odp7LecKcsedfTIa9u/KNWSZDEVWP5ZMUzg="></script>
+    nonce="6NDQogLKiiExfZOf4mHwl9eeUT31Y113X79xkOaJIEI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -387,9 +387,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
