--- a/VRChat/66/1007666.html
+++ b/VRChat/66/1007666.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "443+HEODVP7UVqePc4BNTDcI5T3idADp1i/uqgjCmgs="></script>
+    "GGsF/c6FpHLzlVMm05j+JRfhnk1vYh3aH2jkwHV9J/U="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[BP]槍盾セット","description":"[BP]槍盾セット　ver1.0\n\n●商品説明\nシンプルな槍と盾のセットになります。\n\n●内容物\n・槍\nspear.fbx　　　　　(槍本体)\nspear_Albedo.png　（Albedoマップ）\nspear_Metallic.png（Metallicマップ）\nspear_Normal.png　（Normalマップ）\nspear.unitypackage\n\nポリゴン数:2112\n\n・盾\nshield.fbx　　　　　(盾本体)\nshield_Albedo.png　（Albedoマップ）\nshield_Metallic.png（Metallicマップ）\nshield_Normal.png　（Normalマップ）\nshield.unitypackage\n\nポリゴン数:1088\n\n●利用規約\n改変・商用利用は可となります。\n＊取り出せる形での配布は禁止となります。\n\n【免責事項】\nこの製品を利用して発生したトラブルに関しては、一切の責任を負いません。\n\n何かご質問がありましたらTwitter:@buchipanda_VRまでご連絡をお願いします。","url":"https://booth.pm/ja/items/1007666","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/aabbb614-482e-4b6d-8e57-4b27696be81e/i/1007666/7ade0802-5b3a-467c-a330-421644690ca4_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="443+HEODVP7UVqePc4BNTDcI5T3idADp1i/uqgjCmgs="></script>
+    nonce="GGsF/c6FpHLzlVMm05j+JRfhnk1vYh3aH2jkwHV9J/U="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -170,7 +170,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      113
+                                      114
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -186,7 +186,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      113
+                                      114
                                     </div>
                                   </div></a>
                                 </div>
@@ -382,9 +382,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
