--- a/VRChat/60/1007560.html
+++ b/VRChat/60/1007560.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "goABu6aRiqgAEOhzWZhsxg/g8vOiD09tzCoZb8HhQ8I="></script>
+    "/DvPvdhQoG+T8b/72pYEKEGxRjnJ5jpWgIQKO7r1Y/A="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"武器/装備セット1","description":"■VRChat向けの射撃兵装セットです\n　・EMスマートガン:長距離射撃用の大型火器。両腕保持する武器ですが腕部に懸架できるマウントアームが付属します\n　・EGライフルMark2:EGライフルの改良・発展型\n　・汎用突撃型ライフル：ケースレス弾薬を採用した汎用火器\n　・多目的兵装懸架システム：各種装備を携行するためのバックパック・ユニット\n\n　UTS2.0対応(Packageを使用する際は予めUTS2.0を入れてください)\n\n■ポリゴン数\n　スマートガン：5,164\n　EGライフルMk2：2,848\n　突撃型ライフル:1,258\n　兵装懸架システム：2,970\n　(ポリゴン数が多いためAnimation Overrideでの表示を推奨します)\n\n■禁止事項：再配布、自作発言","url":"https://booth.pm/ja/items/1007560","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/4c0b8e4e-23ce-4b6b-91ae-c803cad67328/i/1007560/8bfade98-1926-4ee8-96c6-19588661c771_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="goABu6aRiqgAEOhzWZhsxg/g8vOiD09tzCoZb8HhQ8I="></script>
+    nonce="/DvPvdhQoG+T8b/72pYEKEGxRjnJ5jpWgIQKO7r1Y/A="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -410,9 +410,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
