--- a/VRChat/94/1007394.html
+++ b/VRChat/94/1007394.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "vmdiz26pfOAWmA5tCNCkHfoMYkEZe8ZOj7VNaiQZYzE="></script>
+    "j/6UtVWTxVsjNbWbkn+B9dr6v4LgVH0iwo8BwZFw2FA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"鬼火【VRC利用想定】","description":"いわゆる鬼火っぽいものをパーティクルで作りました。\n\n画像1枚目：旧版\n画像2枚目：新版(Quest対応済)\n\nサンプルはこちら(旧版)\nhttps://twitter.com/kageha_nya/status/1038743740221775872\n\n不具合などあると思うので改善要望、可能な範囲で応えます\n\n","url":"https://booth.pm/ja/items/1007394","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"200"},"image":"https://booth.pximg.net/c/620x620/3cd38ef4-b1af-4a95-9044-19efad8752ed/i/1007394/4774dde3-58a6-4539-beb8-e07be1fc5170_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="vmdiz26pfOAWmA5tCNCkHfoMYkEZe8ZOj7VNaiQZYzE="></script>
+    nonce="j/6UtVWTxVsjNbWbkn+B9dr6v4LgVH0iwo8BwZFw2FA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -490,9 +490,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
