--- a/VRChat/62/1006962.html
+++ b/VRChat/62/1006962.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "fVUZlonErsFP1BAr/dA1HLhFbNToQqwvQM1ubs1xp2c="></script>
+    "rKJeJrfZcC8hCZ9g9jFz16f+qi/BicFKOUf9OxsvBVo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Manji Cube","description":"暇つぶしに作った卍キューブです。\nアクセサリや、インテリアとしてご使用下さい。\n\n\n構造上ポリゴン数が1240と少し多くなっております。\n\n\nどこからみても卍・・・と言う訳にはいかず、３方向からは卍、もう３方向からは卐に見える物となっております。\n\nシェーダーを用いり、各面に５つずつついている小さな卍の文字が点滅するようになっています。\nLitManjiマテリアルのInspectorビューより、任意の色への変更や点滅の速さの変更ができるようになっています。\n\nprefabファイルをご使用下さい。\n\n同梱されているreadmeに書かれている内容はここに書かれているものと同じです。\n\nライセンスは放棄するので、改変、再配布、商用利用等、ご自由にどうぞ。\n\nなお、使用に際して生じたいかなる損害に関して頒布者（suraimu752）は一切の責任を負わないものとします。\n\n\nなにか連絡が必要な場合はTwitter(@natsumugi726)までリプかDMを送って下さい。","url":"https://booth.pm/ja/items/1006962","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/ab6abf2f-1e54-4c70-92b9-8e0aa2a0b4a6/i/1006962/20f7893f-e77b-4a00-8492-2398900e47c6_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="fVUZlonErsFP1BAr/dA1HLhFbNToQqwvQM1ubs1xp2c="></script>
+    nonce="rKJeJrfZcC8hCZ9g9jFz16f+qi/BicFKOUf9OxsvBVo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -362,9 +362,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
