--- a/VRChat/78/1006978.html
+++ b/VRChat/78/1006978.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "fl88ynbgdQ8Dc1oPka3/37h1IHKMU3n9x0tTx6NTjb0="></script>
+    "v/aTwScknVYXSC/FxJRpYkaK+DznalkxQiYGqbjSrKc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Kite Shield（歩兵用中型盾）","description":"中型盾として特に有名なカイトシールドを当工房でも制作しました。\nSketchfabで3Dモデルの閲覧ができます。\n\nポリゴン数 △1480\nテクスチャ数 2048*2048 3枚\n\nオリジナルの盾紋様を導入しやすいよう、デフォルトの紋様を適用していないテクスチャファイルも用意しています。是非自分の、グループのシンボルマークなどで盾を飾ってみてください。\n\n2枚目の使用例画像\n・剣：当工房製 Heavy Sword（重量片手剣）\nhttps://garden-of-ashen.booth.pm/items/946253\n\n・モデル：KUKURi様 桜川虎子\nhttps://booth.pm/ja/items/987801","url":"https://booth.pm/ja/items/1006978","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/719c3d6d-7dd0-4162-aa85-2ed21e39cf9a/i/1006978/06193b82-18cd-443a-a64f-89872d04132c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="fl88ynbgdQ8Dc1oPka3/37h1IHKMU3n9x0tTx6NTjb0="></script>
+    nonce="v/aTwScknVYXSC/FxJRpYkaK+DznalkxQiYGqbjSrKc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -174,7 +174,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      50
+                                      51
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -190,7 +190,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      50
+                                      51
                                     </div>
                                   </div></a>
                                 </div>
@@ -473,9 +473,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
