--- a/VRChat/13/1006913.html
+++ b/VRChat/13/1006913.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "o0EtYN0wF8q0rsvNneDPgB4e2fTWl6S5gjdcpdy6PHA="></script>
+    "uj1YakGxdxOigVchHTXHLD9rI5litOmMI3MYZwbYPPQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"『キッシュ』用髪型セット","description":"##モデル説明##\n『キッシュ』用髪型セット\n制作者：muta\n\n※モデル説明の下に利用規約が記載されていますので、ご了承の上での購入をお願いします。\n\n#内容物\n・Hair_TypeA.fbx\n・Hair_TypeB.fbx\n・Hair_TypeC.fbx\n・Hair_TypeD.fbx\n・Hair_TypeE.fbx\n・Tail.fbx\n　それぞれの髪型データとバージョン1に移植するための尻尾のデータです。\n　見た目についてはReadme内の髪型一覧.pngを確認してください。\n\n・hair.png\n　髪のテクスチャです。\n\n#モデルについて\n　『キッシュ』用髪型セットとしてボーンのセットアップされた髪型のデータが5種類含まれています。\n　※本体モデル『キッシュ』はこのデータに含まれておりません。\n　Tail.fbxについては、バージョン1の場合髪と尻尾のメッシュが別れていないので、導入時に新たに追加する必要があります。\n\n#導入方法について\n　Unityでの導入方法の画像を用意したので、Readme内の髪型移植方法.pngを確認してください。\n\n#『キッシュ』以外での使用について\n　利用規約通り改造の範囲内として問題ありませんが、そういった改造が許可されたモデルにのみ導入してください。","url":"https://booth.pm/ja/items/1006913","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/10942f35-97bb-434d-9f5a-6083e00c7891/i/1006913/ab340529-ce5d-4547-b79d-f8973444ff27_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="o0EtYN0wF8q0rsvNneDPgB4e2fTWl6S5gjdcpdy6PHA="></script>
+    nonce="uj1YakGxdxOigVchHTXHLD9rI5litOmMI3MYZwbYPPQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -438,9 +438,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
