--- a/VRChat/73/1006573.html
+++ b/VRChat/73/1006573.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "bjOECgZEoTNh5iz4hd7s5dGbQxKxFTPeBlESnfjxz+0="></script>
+    "wPGmdHhSYy0dlIFni16JFXHu4TJtVRJwOT51sPZhvUM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"さとかぜ音頭","description":"ばーちゃる御庭ん番Youtuberのさとかぜでござる！\nさとかぜ夏祭りで使用いたしました楽曲、「さとかぜ音頭」でござる！今回はカラオケばーじょんも収録いたしましたー！\n\n【内容物】\n・さとかぜ音頭\n・さとかぜ音頭_OKE\n\n唄…さとかぜ＆宮丘風郷\n作詞・作曲 仲村水希（STUDIO KNIGHTS）","url":"https://booth.pm/ja/items/1006573","offers":{"priceCurrency":"JPY","@type":"Offer","price":"400"},"image":"https://booth.pximg.net/c/620x620/674554bb-d69c-440e-a2ba-da59870cd59d/i/1006573/e61d88b5-3090-4ad0-a786-82ad69e5e701_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="bjOECgZEoTNh5iz4hd7s5dGbQxKxFTPeBlESnfjxz+0="></script>
+    nonce="wPGmdHhSYy0dlIFni16JFXHu4TJtVRJwOT51sPZhvUM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -395,9 +395,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
